// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack config matches development snapshot 1`] = `
Object {
  "devServer": Object {
    "open": true,
  },
  "entry": Object {
    "index": "./src/index.ts",
  },
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "exclude": /node_modules/,
        "loader": "eslint-loader",
        "options": Object {
          "emitWarning": true,
        },
        "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
      Object {
        "include": Array [
          "<PROJECT_ROOT>/src",
        ],
        "loader": "babel-loader",
        "options": Object {
          "plugins": Array [
            "syntax-dynamic-import",
          ],
          "presets": Array [
            Array [
              "@babel/preset-env",
              Object {
                "modules": false,
              },
            ],
            "@babel/preset-react",
            Array [
              "@babel/preset-typescript",
              Object {
                "allExtensions": true,
                "isTSX": true,
              },
            ],
          ],
        },
        "test": /\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    ],
  },
  "optimization": Object {
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendors": Object {
          "priority": -10,
          "test": /\\[\\\\\\\\\\\\/\\]node_modules\\[\\\\\\\\\\\\/\\]/,
        },
      },
      "chunks": "async",
      "minChunks": 1,
      "minSize": 30000,
      "name": true,
    },
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<PROJECT_ROOT>/dist",
  },
  "plugins": Array [
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    ProgressPlugin {
      "handler": undefined,
      "modulesCount": 500,
      "profile": false,
      "showActiveModules": true,
      "showEntries": false,
      "showModules": true,
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "template": "<PROJECT_ROOT>/node_modules/html-webpack-plugin/default_index.ejs",
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
}
`;

exports[`webpack config matches production snapshot 1`] = `
Object {
  "devServer": Object {
    "open": true,
  },
  "entry": Object {
    "index": "./src/index.ts",
  },
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "exclude": /node_modules/,
        "loader": "eslint-loader",
        "options": Object {
          "emitWarning": true,
        },
        "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
      Object {
        "include": Array [
          "<PROJECT_ROOT>/src",
        ],
        "loader": "babel-loader",
        "options": Object {
          "plugins": Array [
            "syntax-dynamic-import",
          ],
          "presets": Array [
            Array [
              "@babel/preset-env",
              Object {
                "modules": false,
              },
            ],
            "@babel/preset-react",
            Array [
              "@babel/preset-typescript",
              Object {
                "allExtensions": true,
                "isTSX": true,
              },
            ],
          ],
        },
        "test": /\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    ],
  },
  "optimization": Object {
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendors": Object {
          "priority": -10,
          "test": /\\[\\\\\\\\\\\\/\\]node_modules\\[\\\\\\\\\\\\/\\]/,
        },
      },
      "chunks": "async",
      "minChunks": 1,
      "minSize": 30000,
      "name": true,
    },
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<PROJECT_ROOT>/dist",
  },
  "plugins": Array [
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    ProgressPlugin {
      "handler": undefined,
      "modulesCount": 500,
      "profile": false,
      "showActiveModules": true,
      "showEntries": false,
      "showModules": true,
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "template": "<PROJECT_ROOT>/node_modules/html-webpack-plugin/default_index.ejs",
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
}
`;
